# printer-ink-monitor

./: README.md  demo_output.txt  pyproject.toml
source/printer_ink_monitor/: __init__.py
source/printer_ink_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
source/printer_ink_monitor/cli/: main.py
